# RealmForge

./: .env.example  README.md  pyproject.toml
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/api/: __init__.py  app.py  dependencies.py  main.py
src/api/routers/: difficulty.py  narrative.py  npc.py  optimizer.py  visualization.py  world.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  difficulty.py  narrative.py  npc.py  player.py  visualization.py  world.py
src/realmforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/services/: __init__.py  difficulty.py  narrative.py  npc.py  optimizer.py  visualization.py  world.py
src/services/assets/: __init__.py  asset_manager.py  asset_types.py
src/services/visualization/: animation_system.py  code_generator.py  scene_generator.py  template_manager.py
src/workflows/: utils.py
src/workflows/narrative/: __init__.py  prompt.py  workflow.py
static/: index.html
static/js/: app.js
tests/services/assets/: test_asset_manager.py
tests/services/config/: test_config_manager.py
tests/services/difficulty/: test_difficulty_service.py
tests/services/narrative/: test_narrative_service.py
tests/services/npc/: test_npc_service.py
tests/services/optimizer/: test_optimizer_service.py
tests/services/resources/: test_resource_manager.py
tests/services/visualization/: test_animation_system.py  test_scene_generator.py  test_template_manager.py  test_visualization_service.py
tests/services/world/: test_world_service.py
